# aethermor

./: .gitattributes  .gitignore  AethermorEvolutionarySim.py  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HONEST_REVIEW.md  LICENSE  LIMITATIONS.md  NOTICE  NVIDIA_ENGINEERING_BRIEF.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  VALIDATION.md  aether_log_analysis.py  app.py  benchmark_material_twin.py  benchmark_metabolic_cluster.py  benchmark_morphogenesis.py  benchmark_thermodynamic_core.py  digital_twin_reparameterization.py  evaluate_aethermor.py  publication_gate.py  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  run_all_benchmarks.py  run_all_validations.py  thermodynamic_core.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  external_evaluation.md  model_question.md  validation_discrepancy.md
.github/workflows/: ci.yml
aethermor/: __init__.py  __main__.py  cli.py
aethermor/analysis/: design_space.py  landauer_gap.py  regime_map.py  tech_roadmap.py  thermal_map.py  thermal_optimizer.py
aethermor/app/: __init__.py  main.py
aethermor/physics/: __init__.py  chip_floorplan.py  constants.py  cooling.py  energy_models.py  materials.py  thermal.py
aethermor/simulation/: AethermorEvolutionarySim.py  __init__.py  aethermor_full_simulation_v2.py  benchmark_morphogenesis.py  benchmark_thermodynamic_core.py  physical_simulation.py  run_all_benchmarks.py  scarcity_aethermor.py
aethermor/validation/: validate_all.py
analysis/: __init__.py  design_space.py  landauer_gap.py  regime_map.py  tech_roadmap.py  thermal_map.py  thermal_optimizer.py
benchmarks/: case_study_cooling_decision.py  case_study_datacenter.py  case_study_mobile_soc.py  case_study_soc_bottleneck.py  case_study_substrate_selection.py  chip_thermal_database.py  emit_results.py  experimental_validation.py  external_benchmark_pack.py  hardware_correlation.py  hardware_correlation_results.json  hotspot_comparison.py  independent_textbook_validation.py  literature_validation.py  material_cross_validation.py  real_world_validation.py  uncertainty_propagation.py
benchmarks/gold_outputs/: production_suite_v1.0.0.json
benchmarks/production_suite/: cases.csv  run_production_suite.py
data/: golden_metrics.json  synthetic_hardware_log.csv
docs/: ACCURACY.md  ACCURACY_ENVELOPE.md  API_REFERENCE.md  API_STABILITY.md  CASE_STUDY.md  CASE_STUDY_PARADIGM.md  CASE_STUDY_SOC.md  EXTERNAL_VALIDATION.md  GOVERNANCE.md  HARDWARE_CORRELATION.md  HONEST_REVIEW.md  INSTALL_VERIFY.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  REPRODUCIBILITY.md  SAFE_USE.md  SEMVER.md  SUPPORT_POLICY.md  VALIDATION.md  VERIFICATION_LAYERS.md  benchmark_protocol.md  calibration_case_study.md  case_study_datacenter_gpu.md  uncertainty_sensitivity.md
examples/: adiabatic_crossover.py  custom_material.py  heterogeneous_soc.py  material_comparison.py  optimal_density.py  technology_roadmap.py  thermal_optimizer.py  workflow_architecture_screening.py  workflow_cooling_tradeoff.py  workflow_substrate_ranking.py
experiments/: exp_ablations.py  exp_fault_sweeps.py  exp_publication_robustness.py  exp_scaling.py
paper/: aethermor_paper.md  aethermor_paper.tex
physics/: __init__.py  chip_floorplan.py  cooling.py  energy_models.py  materials.py  thermal.py
reports/: release_v1.0.0_benchmark_report.md
scripts/: ci_smoke_test.py  freeze_gold_outputs.py  gather_accuracy_metrics.py  regen_golden_metrics.py  release_check.py  reproduce_strict.ps1  reproduce_strict.sh
simulation/: aethermor_full_simulation_v2.py  benchmark_material_twin.py  benchmark_metabolic_cluster.py  digital_twin_reparameterization.py  physical_simulation.py  run_all_benchmarks.py
tests/: conftest.py
tests/benchmarks/: benchmark_material_twin.py  benchmark_metabolic_cluster.py  benchmark_morphogenesis.py  test_novelty_claims.py
tests/integration/: test_calibration_workflow.py  test_engineering_workflows.py  test_full_simulation.py  test_ga_end_to_end.py  test_log_analysis.py  test_long_horizon_stability.py  test_physical_simulation.py
tests/performance/: test_dashboard_startup.py  test_memory_usage.py  test_runtime_scaling.py
tests/regression/: test_baseline_metrics.py  test_field_history_integrity.py
tests/unit/: test_ablation_stats.py  test_benchmark_methodology.py  (+16 more)
validation/: validate_all.py
(+7 files in other folders)
