[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethermor"
version = "0.1.0"
description = "Thermal design tools for thermodynamic computing — explore material, cooling, energy, and architecture trade-offs."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/Yoder23/aethermor"
Repository = "https://github.com/Yoder23/aethermor"
"Bug Tracker" = "https://github.com/Yoder23/aethermor/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "flake8",
]
dashboard = [
    "dash",
    "plotly",
]
all = [
    "dash",
    "plotly",
    "requests",
    "deap",
    "psutil",
    "pytest",
    "coverage",
    "flake8",
]

# pytest config lives in pytest.ini (takes precedence over pyproject.toml)

[tool.setuptools.packages.find]
include = ["aethermor*", "physics*", "analysis*", "validation*", "simulation*"]
exclude = ["tests*", "archive*", "experiments*", "scripts*"]
