[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethermor"
version = "1.0.1"
description = "Python toolkit for chip thermal analysis, cooling tradeoffs, and compute-density limits in advanced hardware systems."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = [
    "thermal-analysis",
    "chip-thermal-modeling",
    "heat-transfer",
    "computer-architecture",
    "semiconductor",
    "thermodynamics",
    "cooling",
    "compute-density",
    "scientific-computing",
    "simulation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/Yoder23/aethermor"
Repository = "https://github.com/Yoder23/aethermor"
"Bug Tracker" = "https://github.com/Yoder23/aethermor/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "flake8",
]
dashboard = [
    "dash",
    "plotly",
]
all = [
    "dash",
    "plotly",
    "requests",
    "deap",
    "psutil",
    "pytest",
    "coverage",
    "flake8",
]

# pytest config lives in pytest.ini (takes precedence over pyproject.toml)

[project.scripts]
aethermor = "aethermor.cli:main"

[tool.setuptools.packages.find]
include = ["aethermor*"]
exclude = ["tests*", "archive*", "experiments*", "scripts*"]
